--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,5 +66,14 @@ h1, h2, h3, h4, h5, h6 {
   
   body {
     overscroll-behavior-y: none;
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+}
+
+@supports (padding: max(0px)) {
+  body {
+    padding-left: max(0px, env(safe-area-inset-left));
+    padding-right: max(0px, env(safe-area-inset-right));
   }
 }
